create contact section and footer

--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -21,3 +21,7 @@
     justify-content: space-around;
     padding: 25px!important;
 }
+.gordonfont{
+    font-family: "GordonFont"!important;
+  }
+  
