--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,7 @@
     font-weight: 500;
 }
 .h-auto{
+    border:1px solid black;
     height: 100%!important;
     padding: 0px!important;
     margin-bottom: 0;
